objects/xDO_Tool_TrackingEventJob__mdt.object
<CustomObject>
    <description>Tracking Event Jobs</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Queueable batch size between 1 and 99. Defaults to 50</description>
        <inlineHelpText>Queueable batch size between 1 and 99. Defaults to 50</inlineHelpText>
        <label>Batch Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <description>Class that extends from SDO_Tool_TrackingEventService.SDO_Tool_TrackingEventClient</description>
        <inlineHelpText>Class that extends from SDO_Tool_TrackingEventService.SDO_Tool_TrackingEventClient</inlineHelpText>
        <label>Client Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Stage__c</fullName>
        <description>Entry criteria for the job&apos;s Tracking Event records to be processed</description>
        <inlineHelpText>Entry criteria for the job&apos;s Tracking Event records to be processed</inlineHelpText>
        <label>Entry Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Mixpanel Event</fullName>
                </value>
                <value>
                    <fullName>Mixpanel Profile</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Stage__c</fullName>
        <description>Exit stage for the job&apos;s Tracking Event records that are successfully processed</description>
        <inlineHelpText>Exit stage for the job&apos;s Tracking Event records that are successfully processed</inlineHelpText>
        <label>Exit Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mixpanel Event</fullName>
                    <default>true</default>
                    <label>Mixpanel Event</label>
                </value>
                <value>
                    <fullName>Mixpanel Profile</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Schedulable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the job be scheduled?</description>
        <inlineHelpText>Should the job be scheduled?</inlineHelpText>
        <label>Is Schedulable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>The scheduled job name.</description>
        <inlineHelpText>The scheduled job name.</inlineHelpText>
        <label>Job Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Notification_Time__c</fullName>
        <label>Last Notification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <description>Named Credential used by the Client</description>
        <inlineHelpText>Named Credential used by the Client</inlineHelpText>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Emails__c</fullName>
        <label>Notification Emails</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>Unique identifier for a target system environment</description>
        <inlineHelpText>Unique identifier for a target system environment</inlineHelpText>
        <label>Project Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Friendly name identifier for a target system environment</description>
        <inlineHelpText>Friendly name identifier for a target system environment</inlineHelpText>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Token__c</fullName>
        <description>Target system Project Token</description>
        <label>Project Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queueable_Type__c</fullName>
        <description>Class that extends from SDO_Tool_QueueableBase</description>
        <inlineHelpText>Class that extends from SDO_Tool_QueueableBase</inlineHelpText>
        <label>Queueable Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Interval__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Job schedule interval in minutes. Recommended value is 5 and must be greater than 3</description>
        <inlineHelpText>Job schedule interval in minutes. Recommended value is 5 and must be greater than 3</inlineHelpText>
        <label>Schedule Interval</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>xDO Tool - Tracking Event Job</label>
    <pluralLabel>xDO Tool - Tracking Event Jobs</pluralLabel>
</CustomObject>